@@ -31,7 +31,7 @@ PROJECT_NAME           = biosensor
 # This could be handy for archiving the generated documentation or
 # if some version control system is used.
 
-PROJECT_NUMBER         = bio_inj-el-0.4.1-b1
+PROJECT_NUMBER         = bio_inj-el-0.4.1
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
 # base path where the generated documentation will be put.
